# Signals_Generation

./: Polling_Ino_final.ino  Polling_Python_final.py  README.md
c_irq/: CMakeLists.txt  main.c
c_pol/: CMakeLists.txt  main.c  main.h
